--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "secrets:pack": "node vault-storage/scripts/pack.js",
+    "secrets:unpack": "node vault-storage/scripts/unpack.js"
   },
   "eslintConfig": {
     "extends": [
