--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "secrets:pack": "node vault-storage/scripts/pack.js",
-    "secrets:unpack": "node vault-storage/scripts/unpack.js"
+    "secrets:unpack": "node vault-storage/scripts/unpack.js",
+    "secrets:changepassword": "node vault-storage/scripts/change-password.js"
   },
   "eslintConfig": {
     "extends": [
