Initial draft of fileviewer

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Vault",
   "icons": [
     {
-      "src": "logo.svg",
+      "src": "lock.svg",
       "sizes": "16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256 512x512"
     }
   ],
