Start working on filesystem implementation
Will allow users to add, remove and edit files when a vault is unlocked

--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "immer": "^3.3.0",
+    "use-immer": "^0.3.5"
   }
 }
